assets/css/index_styles.css
/* TODO */

body {
	background-color: #d1d6cf;
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
}

.container {
	background: #f8dccd;
	height: 82vh;
	width: 68vw;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

.shop {
	background-color: #d1d6cf;
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;
}

.shopWindow {
	background-color: #d1d6cf;
	margin-top: 0;
	font-family: 'Mountains of Christmas', cursive;

	background: #f8dccd;
	height: 82vh;
	width: 67vw;
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

.header {
	text-align: center;
	padding-top: 10%;
	font-size: 80px;
	margin-top: 0;
}

a {
	text-decoration: none;
	color: white;
}

.button {
	display: inline-block;
	background-color: #f29b67;
	text-align: center;
	padding: 5px;
	font-size: 20px;
	border: white solid 5px;
	border-radius: 10%;
}

/* move slightly up on hover */
.button:hover {
	-webkit-transform: translateY(-3px);
	transform: translateY(-3px);
}

/* TODO */

.back {
	height: 60px;
	float: left;
	padding-top: 10px;
	padding-left: 15px;
}

.backpack {
	height: 100px;
	float: right;

	padding-left: 15px;
}

.character {
	width: 38%;
	float: left;
	height: 100%;
	border-right: black 1px solid;
}

.currChar {
	padding-top: 10%;
	/* padding-left: 10%; */
	height: 50%;
	display: inline-block;
}

.market {
	width: 61%;
	float: right;
	height: 100%;
	padding-top: 20px;
}

.currCoins {
	/* display: block; */
	text-align: left;
	font-size: 30px;
}

.market p {
	font-size: 3rem;
}

.item {
	height: 5rem;
}

.h {
	margin-bottom: 0.5rem;
}

.itemName {
	font-size: 1rem;
	margin-bottom: 0.25rem;
}

.cost {
	vertical-align: middle;
	height: 30px;
}

.purchaseButton {
	/* padding-top: 40px; */
	margin-top: 30px;
	height: 40px;
	width: 100px;
}

.purchaseButton:hover {
	opacity: 70%;
}
.purchaseConfirmBox {
	background-color: white;
	padding: 20px;
	width: 80%;
	text-align: center;
	margin-top: 20px;
	border: black 1px solid;
	display: none;
	/* display: inline-block; */
}

.purchaseOption {
	margin-left: 20px;
	margin-right: 20px;
}

